deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: m1-lincoln
  labels:
    app: m1-lincoln
spec:
  selector:
    matchLabels:
      app: m1-lincoln
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: m1-lincoln
    spec:
      containers:
        - name: m1-lincoln
          image: 152512582646.dkr.ecr.us-east-2.amazonaws.com/dev:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
