service.yml
apiVersion: v1
kind: Service
metadata:
  name: m1-lincoln
spec:
  selector:
    app: m1-lincoln
  type: LoadBalancer
  ports:
    -  protocol: TCP
       port: 80
       targetPort: 9000
